--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "react-native-fontawesome": "^6.0.1",
         "react-native-i18n": "1.0.0",
         "react-native-interactable": "^0.1.10",
+        "react-native-keyboard-aware-scroll-view": "^0.8.0",
         "react-native-masked-text": "^1.9.2",
         "react-native-modal": "^6.0.0",
         "react-native-modalbox": "^1.4.2",
